# Eye-Scraping

./: README.md  pyproject.toml
docs/: 1.pengantar.md  2.1.scraping_itu.md  2.bab_1_kenalan_dengan_data_scraping.md  3.1.Silabus Backend Developer Python.md  3.1.Silabus_Backend_Developer_Python.md  3.datascraping-silabus.md  4.contoh_jobdesk_datascraping.md  5.Studi_kasus_scraping_web_pertama.md  bab_1_kenalan_dengan_data_scraping.md
src/scraper/nike/: config.py  crawler.py
